--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    test
-</body>
+  </head>
+  <body>
+    <div class="totally-not-a-spinner"></div>
+    <div style="position: relative; height: 50vh; width: 50vw">
+      <div class="totally-not-a-spinner"></div>
+    </div>
+  </body>
 </html>
