--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="spinner.css" />
   </head>
   <body>
-    <div class="totally-not-a-spinner"></div>
+    <div class="totally-not-a-spinner indented"></div>
     <div style="position: relative; height: 50vh; width: 50vw">
       <div class="totally-not-a-spinner"></div>
     </div>
