--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="totally-not-a-spinner indented"></div>
     <div style="position: relative; height: 50vh; width: 50vw">
-      <div class="totally-not-a-spinner"></div>
+      <div class="totally-not-a-spinner indented"></div>
     </div>
   </body>
 </html>
